fix: 모달 z-index 수정

--- a/community/viewpost.css
+++ b/community/viewpost.css
@@ -83,12 +83,12 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.4);
     justify-content: center;
     align-items: center;
-    z-index: 999;
+    z-index: 2000;
 }
 
 .modal-content {
